--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    min-height: 80vh;
     box-sizing: border-box;
     font-family: 'Segoe UI', sans-serif;
     background: rgb(187,245,235);
@@ -9,4 +10,7 @@ background: -webkit-radial-gradient(circle, rgba(187,245,235,1) 0%, rgba(255,255
 background: radial-gradient(circle, rgba(187,245,235,1) 0%, rgba(255,255,255,1) 47%, rgba(78,235,122,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bbf5eb",endColorstr="#4eeb7a",GradientType=1)
    
+}
+#container{
+    min-height: 80vh;
 }
